welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: not found: value nbBIscuit
if (nbBIscuit >= 3) {
    ^