welcome.lessons.welcome.loopdowhile.Poucet.scala.code
do {
var nbBiscuit = 0
for (compteur <- 1 to 5) {
	avance();
	if (estSurBiscuit) {
		nbBiscuit = nbBiscuit + 1
	}
}
if (nbBIscuit >= 3) {
	gauche();
} else {
	droite();
}
} while (sortieTrouvee)
